# wordle_rl

./: .gitignore  README.md  create_wordle_dataset.py  docker-shell.sh  eval_wordle_training_set.sh  finetune_wordle.sh  requirements.txt  scratch.ipynb  scratch.md  test_dataset.py  test_model_loading.py  train_wordle.sh  upload_to_hf.py  wandb_ppo_command.sh  wordle_dataset.py  wordle_env.py
examples/: config.yaml  qwen2_5_vl_3b_geo3k_grpo.sh
outputs/2025-07-14/00-36-27/.hydra/: hydra.yaml
outputs/2025-07-14/00-37-42/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs/2025-07-14/02-05-25/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs/2025-07-14/02-09-37/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs/2025-07-14/02-11-21/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs/2025-07-14/02-12-21/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs/2025-07-14/02-13-00/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs/2025-07-14/02-14-33/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs/2025-07-14/02-16-00/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs/2025-07-14/02-17-40/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs/2025-07-14/02-18-16/.hydra/: config.yaml  hydra.yaml  overrides.yaml
verl/: README.md
verl/recipe/spin/: spin_trainer.py
verl/verl/interactions/: wordle_interaction.py
verl/verl/tools/: wordle_tool.py
wordle_finetune_data/: .gitignore  README.md  finetune_qwen.py  generate_examples.py  main.py  pyproject.toml  read_jsonl_example.py  scratch.ipynb  upload_model.py
(+680 files in other folders)
